--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,60 @@
-# dependencies
-node_modules/
+# Node.js dependencies
+/node_modules/
 
-# build
-dist/
-build/
+# Build outputs
+/dist/
+/build/
 
-# local config
-.env
-.env.local
-
-# system files
-.DS_Store
-Thumbs.db
-
-# IDEs and editors
-.vscode/
-.idea/
-*.sublime-workspace
-*.code-workspace
-
-# log files
-*.log
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# optional: compiled JS from TS
-*.js
-*.js.map
+# Optional runtime data
+.pnpm-debug.log*
+.vscode/
+*.sublime-workspace
+*.sublime-project
 
-# cache
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE configs
+.idea/
+*.iml
+
+# Cache files
 .cache/
+*.log
+*.tmp
+*.swp
+*.bak
+
+# Babel, ESLint, etc.
+.babelrc
+.eslintcache
+.stylelintcache
+
+# Optional: TypeScript
+*.tsbuildinfo
+
+# Optional: If using Vite
+/.vite/
+
+# Optional: If using Webpack
+/webpack-stats.json
+
+# Optional: Coverage reports
+/coverage/
+
+# Optional: Parcel
+.cache/
+.parcel-cache/
